--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ orjson >= 3.7, < 4.0
 packaging >= 21.3, < 24.3
 pathspec >= 0.8.0
 pendulum >= 2.1.2, < 4.0.0
+prometheus-client >=0 .17.1
 pydantic >= 1.10.0, < 2.0.0
 python-slugify >= 5.0, < 9.0
 pytz >= 2021.1, < 2024
